# shortcircuit

./: in.bharatkalluri.shortcircuit.json  meson.build  readme.md
data/: in.bharatkalluri.shortcircuit.appdata.xml.in  in.bharatkalluri.shortcircuit.desktop.in  in.bharatkalluri.shortcircuit.gresource.xml  in.bharatkalluri.shortcircuit.gschema.xml  meson.build
data/ui/: about_dialog.ui  transformer_search_entry.ui  window.ui
po/: POTFILES  meson.build
src/: in.bharatkalluri.shortcircuit.in  meson.build  shortcircuit.gresource.xml
src/shortcircuit/: main.py  window.py
src/shortcircuit/core/: transformer.py
src/shortcircuit/widgets/: transformer_search_entry.py
src/ui/: about_dialog.ui  window.ui
